# POME

./: CMakeLists.txt  README.md
examples/: evolvingCoreCollapse.cpp  evolvingElectrons.cpp  evolvingElectronsCN.cpp  evolvingPwn.cpp  printSolution.cpp  printSourceSpectrum.cpp  printTimescales.cpp
include/: pome.h
include/pome/: cgs.h  common.h  modelState.h  pome.h  timer.h  utilities.h
include/pome/model/: escape.h  losses.h  spectrum.h
include/pome/source/: abstractSource.h  brokenPowerLaw.h
include/pome/spectrum/: brokenPowerLaw.h
include/pome/transport/: escape.h  losses.h
src/: common.cpp  main.cpp  modelState.cpp  pome.cpp  timer.cpp  tridiag.cpp  utilities.cpp
src/model/: escape.cpp  losses.cpp  spectrum.cpp
src/source/: brokenPowerLaw.cpp
src/spectrum/: brokenPowerLaw.cpp
src/transport/: escape.cpp  losses.cpp
